# alacritty-theme-selector

./: .gitignore  Cargo.toml
src/: main.rs
