[package]
name = "alacritty-theme-selector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"
directories = "5.0.1"
regex = "1.10.3"
serde = { version = "1.0.195", features = ["derive"] }
toml = "0.8.8"
